# desktop

./: AGENTS.md  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  package.json
.github/workflows/: release-desktop-prerelease.yml  release-desktop.yml
src-tauri/: Cargo.toml  tauri.canary.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
