[package]
name = "deni-ai-desktop"
version = "0.1.0"
description = "Tauri desktop shell for deniai.app"
authors = ["Deni AI"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "deni_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
